--- a/ConsumidorControl/src/main/resources/application.properties
+++ b/ConsumidorControl/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.jpa.show-sql=true
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.thymeleaf=DEBUG
