Agregue exportar PDF de la asistencia y details Arregle mi fallido springsecurity Arregle mi fallido isAuthenticated

--- a/ConsumidorControl/src/main/resources/application.properties
+++ b/ConsumidorControl/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.jpa.show-sql=true
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#PDF
+spring.mvc.contentnegotiation.favor-parameter=true
+spring.mvc.contentnegotiation.media-types.pdf=application/pdf
+
