agregue la autenticacion basica http

--- a/ConsumidorControl/src/main/resources/application.properties
+++ b/ConsumidorControl/src/main/resources/application.properties
@@ -23,3 +23,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.mvc.contentnegotiation.favor-parameter=true
 spring.mvc.contentnegotiation.media-types.pdf=application/pdf
 
+server.address=0.0.0.0
+server.port=8080
+
