--- a/ConsumidorControl/src/main/resources/application.properties
+++ b/ConsumidorControl/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.thymeleaf.cache=false
 
 # Conexi\u00c3\u00b3n DB
 spring.datasource.url=jdbc:mysql://localhost/ctn_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.username=Alumnos
+spring.datasource.password=Info024
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate
@@ -22,6 +22,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.mvc.contentnegotiation.favor-parameter=true
 spring.mvc.contentnegotiation.media-types.pdf=application/pdf
 
-server.address=0.0.0.0
-server.port=8080
+#server.address=0.0.0.0
+#server.port=8080
 
