--- a/ConsumidorControl/src/main/resources/application.properties
+++ b/ConsumidorControl/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.thymeleaf.cache=false
 
 # Conexi\u00c3\u00b3n DB
 spring.datasource.url=jdbc:mysql://localhost/ctn_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=Alumnos
-spring.datasource.password=Info024
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate
